@@ -1,3 +1,3 @@
-<section class="center aligned [[+column_type]] client">
+<section class="[[+column_type]] client">
     [[!$[[+row_tpl]]]]
 </section>
