@@ -26,55 +26,66 @@ switch($input) {
         $box_type = "link cards";
         $row_type = "link";
         $column_type = "card";
+        $grid_settings = "stackable doubling";
         break;
     case stripos($input,'Card') !== false:
         $box_type = "cards";
         $row_type = "";
         $column_type = "card";
+        $grid_settings = "stackable doubling";
         break;
     case stripos($input,'Segment') !== false:
         $box_type = "segments";
         $row_type = "segment";
         $column_type = "segment";
+        $grid_settings = "";
         break;
     case stripos($input,'ProjectTile') !== false:
         $box_type = "grid";
         $row_type = "";
         $column_type = "ui dimmable column [[+alias]] background";
+        $grid_settings = "column stackable doubling";
         break;
     case stripos($input,'PersonTile') !== false:
         $box_type = "grid";
         $row_type = "";
         $column_type = "ui column [[+alias]] background";
+        $grid_settings = "column stackable doubling";
         break;
     case stripos($input,'Item') !== false:
         $box_type = "items";
         $row_type = "";
         $column_type = "item";
+        $grid_settings = "";
         break;
     case stripos($input,'Compact') !== false:
         $box_type = "middle aligned list";
         $row_type = "";
         $column_type = "item";
+        $grid_settings = "";
         break;
     case stripos($input,'IconTop') !== false:
         $box_type = "centered grid";
         $row_type = "";
         $column_type = "center aligned column";
+        $grid_settings = "column stackable doubling";
         break;
     case stripos($input,'Logo') !== false:
         $box_type = "centered middle aligned grid";
         $row_type = "";
         $column_type = "center aligned column logo";
+        $grid_settings = "column doubling";
         break;
     default:
         $box_type = "grid";
         $row_type = "";
         $column_type = "column";
+        $grid_settings = "column stackable doubling";
         break;
 }
 
 $modx->toPlaceholder('box_type', $box_type, $prefix);
 $modx->toPlaceholder('row_type', $row_type, $prefix);
 $modx->toPlaceholder('column_type', $column_type, $prefix);
+$modx->toPlaceholder('grid_settings', $grid_settings, $prefix);
 $modx->toPlaceholder('prefix', $prefix);
